--- a/File Creator/File Creator-Info.plist
+++ b/File Creator/File Creator-Info.plist
@@ -83,6 +83,46 @@
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
+				<string>File Creator/Create Ruby Script</string>
+			</dict>
+			<key>NSMessage</key>
+			<string>createRubyScript</string>
+			<key>NSPortName</key>
+			<string>File Creator</string>
+			<key>NSRequiredContext</key>
+			<dict>
+				<key>NSTextContent</key>
+				<string>FilePath</string>
+			</dict>
+			<key>NSSendTypes</key>
+			<array>
+				<string>NSFilenamesPboardType</string>
+			</array>
+		</dict>
+		<dict>
+			<key>NSMenuItem</key>
+			<dict>
+				<key>default</key>
+				<string>File Creator/Create Perl Script</string>
+			</dict>
+			<key>NSMessage</key>
+			<string>createPerlScript</string>
+			<key>NSPortName</key>
+			<string>File Creator</string>
+			<key>NSRequiredContext</key>
+			<dict>
+				<key>NSTextContent</key>
+				<string>FilePath</string>
+			</dict>
+			<key>NSSendTypes</key>
+			<array>
+				<string>NSFilenamesPboardType</string>
+			</array>
+		</dict>
+		<dict>
+			<key>NSMenuItem</key>
+			<dict>
+				<key>default</key>
 				<string>File Creator/Create Shell Script</string>
 			</dict>
 			<key>NSMessage</key>
