Set default key equivalent of "Create File" to Cmd+Option+c

--- a/File Creator/File Creator-Info.plist
+++ b/File Creator/File Creator-Info.plist
@@ -38,7 +38,7 @@
 			<key>NSKeyEquivalent</key>
 			<dict>
 				<key>default</key>
-				<string>c</string>
+				<string>⌥⌘c</string>
 			</dict>
 			<key>NSMenuItem</key>
 			<dict>
